base-odoo-pgcontribe: Merge 13.0 base_multi_image

--- a/base-odoo-pgcontrib.cfg
+++ b/base-odoo-pgcontrib.cfg
@@ -106,6 +106,9 @@ addons = local project-addons
          ;git https://github.com/Comunitea/enterprise.git odoo-repos/enterprise 13.0
          ;git https://github.com/Comunitea/external_modules.git odoo-repos/external 13.0
 
+
+merges = git https://github.com/Comunitea/server-tools.git odoo-repos/server-tools 13.0-mig-base_multi_image ; base_multi_image
+
 eggs = unidecode
        ipdb==0.11
        pudb
