--- a/base-odoo-pgcontrib.cfg
+++ b/base-odoo-pgcontrib.cfg
@@ -103,6 +103,7 @@ addons = local project-addons
          git https://github.com/OCA/stock-logistics-warehouse.git odoo-repos/stock-logistics-warehouse 13.0
          git https://github.com/OCA/stock-logistics-reporting.git odoo-repos/stock-logistics-reporting 13.0
          git https://github.com/OCA/web.git odoo-repos/web 13.0
+         git https://github.com/OCA/server-tools.git odoo-repos/server-tools 13.0
          ;git https://github.com/Comunitea/enterprise.git odoo-repos/enterprise 13.0
          ;git https://github.com/Comunitea/external_modules.git odoo-repos/external 13.0
 
