--- a/base-odoo-pgcontrib.cfg
+++ b/base-odoo-pgcontrib.cfg
@@ -81,13 +81,11 @@ addons = local project-addons
          git https://github.com/OCA/account-invoice-reporting odoo-repos/account-invoice-reporting 13.0
          git https://github.com/OCA/account-payment.git odoo-repos/account-payment 13.0
          git https://github.com/OCA/bank-payment.git odoo-repos/bank-payment 13.0
+         git https://github.com/OCA/pos.git odoo-repos/pos 13.0
          git https://github.com/OCA/bank-statement-reconcile.git odoo-repos/bank-statement-reconcile 13.0
-         git https://github.com/OCA/commission.git odoo-repos/commision 13.0
          git https://github.com/OCA/community-data-files.git odoo-repos/community-data-files 13.0
-         git https://github.com/OCA/contract.git odoo-repos/contract 13.0
          git https://github.com/OCA/crm.git odoo-repos/crm 13.0
          git https://github.com/OCA/currency.git odoo-repos/currency 13.0
-         git https://github.com/OCA/e-commerce.git odoo-repos/ecommerce 13.0
          git https://github.com/OCA/l10n-spain odoo-repos/spain 13.0
          git https://github.com/OCA/mis-builder.git odoo-repos/mis-builder 13.0
          git https://github.com/OCA/multi-company.git odoo-repos/multi-company 13.0
@@ -97,16 +95,16 @@ addons = local project-addons
          git https://github.com/OCA/queue.git odoo-repos/queue 13.0
          git https://github.com/OCA/sale-workflow.git odoo-repos/sale-workflow 13.0
          git https://github.com/OCA/server-ux.git odoo-repos/server-ux 13.0
+         git https://github.com/OCA/server-tools.git odoo-repos/server-tools 13.0
+         git https://github.com/OCA/server-brand.git odoo-repos/server-brand 13.0
          git https://github.com/OCA/social.git odoo-repos/social 13.0
          git https://github.com/OCA/stock-logistics-workflow.git odoo-repos/stock-logistics-workflow 13.0
+         git https://github.com/OCA/operating-unit.git odoo-repos/operating-unit 13.0
          git https://github.com/OCA/stock-logistics-barcode.git odoo-repos/stock-logistics-barcode 13.0
          git https://github.com/OCA/stock-logistics-warehouse.git odoo-repos/stock-logistics-warehouse 13.0
          git https://github.com/OCA/stock-logistics-reporting.git odoo-repos/stock-logistics-reporting 13.0
          git https://github.com/OCA/web.git odoo-repos/web 13.0
          git https://github.com/OCA/server-tools.git odoo-repos/server-tools 13.0
-         ;git https://github.com/Comunitea/enterprise.git odoo-repos/enterprise 13.0
-         ;git https://github.com/Comunitea/external_modules.git odoo-repos/external 13.0
-
 
 merges = git https://github.com/Comunitea/server-tools.git odoo-repos/server-tools 13.0-mig-base_multi_image ; base_multi_image
 
@@ -162,7 +160,7 @@ logfile_odoo = ${buildout:directory}/var/log/odoo-stdout.log
 port = ${settings:supervisor_port}
 serverurl =  ${settings:supervisor_url}:${supervisor:port}
 programs =
-;    10 postgres ${postgres:location}/bin/postmaster [ --config-file=${buildout:config-directory}/postgresql.conf ]
+    10 postgres ${postgres:location}/bin/postmaster [ --config-file=${buildout:config-directory}/postgresql.conf ]
     20 odoo (autostart=true) "${buildout:directory}/bin/start_odoo" [ --logfile "${:logfile_odoo}"] ${buildout:directory} true
 
 [supervisor-cron]
