--- a/base-odoo-pgcontrib.cfg
+++ b/base-odoo-pgcontrib.cfg
@@ -105,6 +105,7 @@ addons = local project-addons
          git https://github.com/OCA/stock-logistics-reporting.git odoo-repos/stock-logistics-reporting 13.0
          git https://github.com/OCA/web.git odoo-repos/web 13.0
          git https://github.com/OCA/server-tools.git odoo-repos/server-tools 13.0
+         git https://github.com/OCA/account-financial-tools.git odoo-repos/account-financial-tools 13.0
 
 merges = git https://github.com/Comunitea/server-tools.git odoo-repos/server-tools 13.0-mig-base_multi_image ; base_multi_image
 
