ADD: Informe contrato, Inicio asistente policia

--- a/base-odoo-pgcontrib.cfg
+++ b/base-odoo-pgcontrib.cfg
@@ -108,6 +108,7 @@ addons = local project-addons
          git https://github.com/OCA/account-financial-tools.git odoo-repos/account-financial-tools 13.0
 
 merges = git https://github.com/Comunitea/server-tools.git odoo-repos/server-tools 13.0-mig-base_multi_image ; base_multi_image
+         git origin odoo-repos/web pull/1782/head
 
 eggs = unidecode
        ipdb==0.11
